# prime_n_comparision

./: Cargo.toml  README.md  prime_n.py  run.ps1
src/: main.rs
